# postgre-hub

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  install.sh
backend/: .gitignore  Cargo.toml  config.json
backend/src/: db.rs  main.rs  routes.rs  users.rs
backend/src/auth/: middleware.rs  mod.rs  routes.rs
backend/src/database/: dump.rs  mod.rs  projects.rs  query.rs  tunnels.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: about-modal.tsx  projects-shell.tsx  sidebar-shell.tsx
frontend/src/components/auth/: auth-view.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  color-picker.tsx  grid.tsx  index.ts  inline-select.tsx  input.tsx  modal.tsx  page.tsx  search-bar.tsx  segmented-control.tsx  select.tsx  spinner.tsx  stat-pill.tsx  switch.tsx  table.tsx  tabs.tsx  text.tsx  theme-toggle.tsx
frontend/src/contexts/: auth.tsx  history-bar.tsx  page-title.tsx  sidebars.tsx  status-bar.tsx
frontend/src/css/ui/: button.module.css  card.module.css  checkbox.module.css  grid.module.css  inline-select.module.css  input.module.css  modal.module.css  search-bar.module.css  segmented-control.module.css  select.module.css  spinner.module.css  stat-pill.module.css  switch.module.css  table.module.css  tabs.module.css  text.module.css  (+1 more)
frontend/src/hooks/: use-auth.ts  use-theme.ts
frontend/src/lib/: colors.ts  formatters.ts
frontend/src/services/: api.ts  auth.ts  database.ts  http.ts  tunnels.ts  users.ts
(+20 files in other folders)
