[package]
name = "backend"
version = "1.0.1"
edition = "2024"

[toolchain]
channel = "stable"
components = ["rustfmt", "clippy"]

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8.4.0"
mime_guess = "2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
sysinfo = "0.38.0"
chrono = "0.4"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
tokio-postgres-rustls = "0.12"
